# fn-reflection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
fn-reflection/: util.py
fn_reflection/: __init__.py  _capcell.py  _external.py  class.py  collections.py  concurrent.py  datetime.py  debug.py  decorator.py  discord.py  exception.py  file.py  func.py  hash.py  importlib.py  json.py  observed.py  pickle.py  send_mail.py  shell.py  sys.py  thread_safe_collections.py  threading.py  time.py  typed_dict.py  urllib.py  util.py  websocket.py  yaml.py
