[metadata]
name = fn_reflection
version = attr:fn_reflection.version
author = Naoki Fujita
author_email = fujitanaoki0718@gmail.com
description = python utility scripts
long_description = file:README.md
url = https://github.com/fn-reflection/fn_reflection
license = Apache License, Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    typing
    selenium

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude =
    test

[wheel]
universal = 1